Refactoring part 6: watchers are refactored

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
     ],
     "tasks": [
         {
-            "taskName": "continuous_build_debug",
+            "taskName": "continuousBuild:debug",
             "isBuildCommand": true,
             "isWatching": true
         },
