--- a/appveyor.yml
+++ b/appveyor.yml
@@ -46,9 +46,5 @@ build_script:
 #---------------------------------#
 
 test_script:
-  - gulp build:visualsTests:ts
-  - gulp install:jasmine
-  - gulp install:phantomjs
-  - gulp combine:all
-  - gulp copy:dependencies_visuals_tests
+  - gulp build:visualsTests
   - gulp run:test:visuals
