Refactoring part 8: Renaming tasks/Using debug mode as default/Missing file header added

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
     ],
     "tasks": [
         {
-            "taskName": "continuousBuild:debug",
+            "taskName": "init",
             "isBuildCommand": true,
             "isWatching": true
         },
