Adds linting step for Appveyor and Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ install:
   - npm install
 script:
  # - phantomjs --version
+  - gulp tslint:visuals
   - gulp build
 notifications:
   email: false
