--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,12 @@ src/Clients/**/obj/*.*
 
 # IDE temp data
 .sublime-gulp.cache
+
+# CustomVisualTemplate
+tools/CustomVisualTemplate/CustomVisualTemplate/bin/
+tools/CustomVisualTemplate/CustomVisualTemplate/obj/
+tools/CustomVisualTemplate/ICustomVisualTemplate/bin/
+tools/CustomVisualTemplate/ICustomVisualTemplate/obj/
+tools/CustomVisualTemplate/obj/
+tools/CustomVisualTemplate/DTAR_08E86330_4835_4B5C_9E5A_61F37AE1A077_DTAR
+tools/CustomVisualTemplate/.vs/
