merges source code from VSO/releases/prod into GitHub repo npm package version - 0.3.3

--- a/gulp/config.json
+++ b/gulp/config.json
@@ -5,7 +5,7 @@
     "generateMaps": true,
     "tslintOnBuild": false,
     "tslintOnChange": true,
-    "emitTsLintError": false,
+    "emitTsLintError": true,
     "includeContentToMap": true,
     "showMSBuildFullLog": false,
     "showMSBuildLogOnError": true,
