--- a/src/Clients/PowerBIVisualsTests/tsconfig.json
+++ b/src/Clients/PowerBIVisualsTests/tsconfig.json
@@ -18,7 +18,7 @@
         "helpers/tablixHelper.ts",
         "helpers/kpiHelper.ts",
         "sqFieldDef.ts",
-        "visuals/common/urlHelperTests.ts",
+        "common/urlUtilsTests.ts",
         "common/colorTests.ts",
         "common/referenceLineHelperTests.ts",
         "utils/kpiUtilTests.ts",
@@ -58,9 +58,8 @@
         "visuals/formatting/dataLabelManagerTests.ts",
         "visuals/formatting/filledMapLabelLayoutTests.ts",
         "visuals/formatting/labelLayoutTests.ts",
-        "visuals/formatting/valueFormatterTests.ts",
         "visuals/formatting/donutLabelLayoutTests.ts",
-        "visuals/playChartTests.ts",
+        "visuals/formatting/valueFormatterTests.ts",
         "visuals/funnelChartTests.ts",
         "visuals/gaugeTests.ts",
         "visuals/horizontalSlicerTests.ts",
@@ -72,6 +71,7 @@
         "visuals/matrixTests.ts",
         "visuals/multiRowCardTests.ts",
         "visuals/performance/performanceTests.ts",
+        "visuals/playChartTests.ts",
         "visuals/scatterChartTests.ts",
         "visuals/scriptVisualTests.ts",
         "visuals/services/colorAllocatorFactoryTests.ts",
@@ -120,7 +120,7 @@
         "customVisuals/forceGraphTests.ts",
         "customVisuals/ganttTests.ts",
         "customVisuals/histogramChartTests.ts",
-        "customVisuals/mekkoTests.ts",
+        "customVisuals/mekkoChartTests.ts",
         "customVisuals/radarChartTests.ts",
         "customVisuals/sankeyDiagramTests.ts",
         "customVisuals/streamGraphTests.ts",
