--- a/src/Clients/VisualsCommon/tsconfig.json
+++ b/src/Clients/VisualsCommon/tsconfig.json
@@ -1,7 +1,6 @@
 {
     "compilerOptions": {
-        "target": "es5",
-        "suppressExcessPropertyErrors": true
+        "target": "es5"
     },
     "filesGlob": [
         "**/*.ts"
@@ -41,6 +40,7 @@
         "Utility/ThrottleUtility.ts",
         "Utility/TimerPromiseFactory.ts",
         "Utility/Utility.ts",
+        "Utility/urlUtils.ts",
         "Utility/wordBreaker.ts"
     ]
 }
